Name: FeynGHS
Version: 0.0.1
Cabal-Version: >= 1.8
Author: unvirtual
Synopsis: WIP for a Feynman diagram generator
Build-type: Simple

Library
    hs-source-dirs: src
    Build-Depends: base,array,containers,mtl,vector
    Exposed-modules:
        Util, MultiGraph, MultiGraph.DFS, MultiGraph.Morphisms, MultiGraph.Generate
